--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 # https://learnxinyminutes.com/docs/yaml/
 
 title: d3LA Analytics
-description: An easy to use blogging platform with support for Jupyter Notebooks.
+description: Series of Projects I have been working on.
 github_username: d3LA
 # you can comment the below line out if your repo name is not different than your baseurl
 github_repo: "wOL3"
