--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
 # https://learnxinyminutes.com/docs/yaml/
 
-title: d3LA Analytics
+title: d3LA
 description: Series of Projects I have been working on.
 github_username: d3LA
 # you can comment the below line out if your repo name is not different than your baseurl
