--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 # https://learnxinyminutes.com/docs/yaml/
 
 title: d3LA
-description: he is no fool to let go of what he cannot kepp to gain what he cannot lose.
+description: he is no fool to let go of what he cannot keep to gain what he cannot lose.
 github_username: d3LA
 # you can comment the below line out if your repo name is not different than your baseurl
 github_repo: "wOL3"
